@@ -36,6 +36,18 @@
  * Phalcon\Session\Adapter\Files
  *
  * This adapter store sessions in plain files
+ *
+ *<code>
+ * $session = new Phalcon\Session\Adapter\Files(array(
+ *    'uniqueId' => 'my-private-app'
+ * ));
+ *
+ * $session->start();
+ *
+ * $session->set('var', 'some-value');
+ *
+ * echo $session->get('var');
+ *</code>
  */
 
 
